--- a/angular.json
+++ b/angular.json
@@ -6,5 +6,127 @@
   },
   "newProjectRoot": "projects",
   "projects": {
+    "@xpr/simple-form": {
+      "projectType": "library",
+      "root": "projects/xpr/simple-form",
+      "sourceRoot": "projects/xpr/simple-form/src",
+      "prefix": "xpr",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/xpr/simple-form/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/xpr/simple-form/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/xpr/simple-form/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/xpr/simple-form/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
+    },
+    "creator": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "projects/creator",
+      "sourceRoot": "projects/creator/src",
+      "prefix": "xprc",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:application",
+          "options": {
+            "outputPath": "dist/creator",
+            "index": "projects/creator/src/index.html",
+            "browser": "projects/creator/src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "projects/creator/tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/creator/public"
+              }
+            ],
+            "styles": [
+              "projects/creator/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kB",
+                  "maximumError": "4kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "creator:build:production"
+            },
+            "development": {
+              "buildTarget": "creator:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "projects/creator/tsconfig.spec.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/creator/public"
+              }
+            ],
+            "styles": [
+              "projects/creator/src/styles.css"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    }
   }
 }
