--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,35 +3,38 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "paths": {
-      "@xpr/simple-form": [
-        "./dist/xpr/simple-form"
-      ]
-    },
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
+    "paths": {
+      "@xprng/markdown": [
+        "./dist/xprng/markdown"
+      ]
+    },
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "declaration": false,
+    "isolatedModules": true,
     "experimentalDecorators": true,
-    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "module": "preserve"
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
+    "typeCheckHostBindings": true,
     "strictTemplates": true
-  }
+  },
+  "files": [],
+  "references": [
+    {
+      "path": "./xprng/markdown/tsconfig.lib.json"
+    },
+    {
+      "path": "./xprng/markdown/tsconfig.spec.json"
+    }
+  ]
 }
