--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
   },
   "devDependencies": {
     "@angular/build": "^20.1.5",
-    "@angular/cli": "^20.1.0",
+    "@angular/cli": "^20.1.5",
     "@angular/compiler-cli": "^20.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/markdown-it": "^14.1.2",
-    "cz-conventional-changelog": "^3.3.0",
+    "cz-conventional-changelog": "^3.0.1",
     "dompurify": "^3.2.6",
     "jasmine-core": "~5.8.0",
     "jsdom": "^26.1.0",
@@ -47,6 +47,8 @@
     "marked": "^16.1.2",
     "marked-highlight": "^2.2.2",
     "ng-packagr": "^20.1.0",
+    "semantic-release": "^24.2.7",
+    "semantic-release-monorepo": "^8.0.2",
     "typescript": "~5.8.2",
     "vitest": "^3.2.4"
   },
