--- a/xprng/markdown/package.json
+++ b/xprng/markdown/package.json
@@ -8,6 +8,10 @@
     "marked": "^16.1.2",
     "marked-highlight": "^2.2.2"
   },
+  "devDependencies": {
+    "semantic-release": "^24.2.7",
+    "semantic-release-monorepo": "^8.0.2"
+  },
   "dependencies": {
     "tslib": "^2.3.0"
   },
