--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/compiler-cli": "^20.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/markdown-it": "^14.1.2",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.0.1",
     "dompurify": "^3.2.6",
     "jasmine-core": "~5.8.0",
