--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,23 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "paths": {
+      "@xprng/code": [
+        "./dist/xprng/code"
+      ],
+      "@xprng/common": [
+        "./dist/xprng/common"
+      ],
+      "@xprng/components": [
+        "./dist/xprng/components"
+      ],
+      "@xprng/highlighter": [
+        "./dist/xprng/highlighter"
+      ],
       "@xprng/markdown": [
         "./dist/xprng/markdown"
+      ],
+      "@xprng/styles": [
+        "./dist/xprng/styles"
       ]
     },
     "noImplicitReturns": true,
@@ -41,6 +56,36 @@
     },
     {
       "path": "./xprng/example/tsconfig.spec.json"
+    },
+    {
+      "path": "./xprng/code1/tsconfig.lib.json"
+    },
+    {
+      "path": "./xprng/code1/tsconfig.spec.json"
+    },
+    {
+      "path": "./packages/xprng/components/tsconfig.lib.json"
+    },
+    {
+      "path": "./packages/xprng/components/tsconfig.spec.json"
+    },
+    {
+      "path": "./packages/xprng/styles/tsconfig.lib.json"
+    },
+    {
+      "path": "./packages/xprng/styles/tsconfig.spec.json"
+    },
+    {
+      "path": "./xprng/common/tsconfig.lib.json"
+    },
+    {
+      "path": "./xprng/common/tsconfig.spec.json"
+    },
+    {
+      "path": "./xprng/code/tsconfig.lib.json"
+    },
+    {
+      "path": "./xprng/code/tsconfig.spec.json"
     }
   ]
 }
