--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "xprng",
+  "newProjectRoot": "",
   "projects": {
     "@xprng/markdown": {
       "projectType": "library",
@@ -105,6 +105,58 @@
             "styles": [
               "xprng/example/src/styles.css"
             ]
+          }
+        }
+      }
+    },
+    "@xprng/common": {
+      "projectType": "library",
+      "root": "xprng/common",
+      "sourceRoot": "xprng/common/src",
+      "prefix": "xpr",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:ng-packagr",
+          "configurations": {
+            "production": {
+              "tsConfig": "xprng/common/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "xprng/common/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "xprng/common/tsconfig.spec.json"
+          }
+        }
+      }
+    },
+    "@xprng/code": {
+      "projectType": "library",
+      "root": "xprng/code",
+      "sourceRoot": "xprng/code/src",
+      "prefix": "xpr",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:ng-packagr",
+          "configurations": {
+            "production": {
+              "tsConfig": "xprng/code/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "xprng/code/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "xprng/code/tsconfig.spec.json"
           }
         }
       }
