--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,8 @@ jobs:
       - name: 🔑 dependencies
         run: npm ci --no-fund
 
-      - name: 🍓 verify
-        run: npm audit signatures
+      #      - name: 🍓 verify
+      #        run: npm audit signatures
 
       - name: 🌈 build
         run: npm run build
