--- a/angular.json
+++ b/angular.json
@@ -154,9 +154,11 @@
           "defaultConfiguration": "production"
         },
         "test": {
-          "builder": "@angular/build:karma",
+          "builder": "@angular/build:unit-test",
           "options": {
-            "tsConfig": "xprng/code/tsconfig.spec.json"
+            "tsConfig": "xprng/code/tsconfig.spec.json",
+            "runner": "vitest",
+            "buildTarget": "::development"
           }
         }
       }
