--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,13 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: cd dist/xprng/code && npx semantic-release
 
+      - name: 🦋release slides
+        if: contains(github.event.head_commit.message, '(slides)')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: cd dist/xprng/slides && npx semantic-release
+
   docs:
     name: docs
     runs-on: ubuntu-latest
