--- a/xprng/markdown/package.json
+++ b/xprng/markdown/package.json
@@ -5,15 +5,15 @@
     "@angular/cdk": "^20.1.0",
     "@angular/common": "^20.1.0",
     "@angular/core": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0"
+    "@angular/platform-browser": "^20.1.0",
+    "@xprng/vendor": "*",
+    "marked": ">=16.0.0",
+    "shiki": ">=3.9.0"
   },
   "devDependencies": {
     "semantic-release": "^24.2.7"
   },
   "dependencies": {
-    "@xprng/vendor": "*",
-    "marked": ">=16.0.0",
-    "shiki": ">=3.9.0",
     "tslib": "^2.3.0"
   },
   "sideEffects": false,
