--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,11 @@ jobs:
       - name: 🔑 dependencies
         run: npm ci --no-fund
 
-      #      - name: 🍓 verify
-      #        run: npm audit signatures
-
       - name: 🌈 build
         run: npm run build
+
+      - name: 🍓 test
+        run: npm test
 
       - name: 🦋release common
         if: contains(github.event.head_commit.message, '(common)')
