--- a/angular.json
+++ b/angular.json
@@ -318,6 +318,32 @@
           }
         }
       }
+    },
+    "@xprng/docs": {
+      "projectType": "library",
+      "root": "xprng/docs",
+      "sourceRoot": "xprng/docs/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:ng-packagr",
+          "configurations": {
+            "production": {
+              "tsConfig": "xprng/docs/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "xprng/docs/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "xprng/docs/tsconfig.spec.json"
+          }
+        }
+      }
     }
   }
 }
