--- a/xprng/markdown/package.json
+++ b/xprng/markdown/package.json
@@ -7,6 +7,7 @@
     "@angular/core": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@xprng/vendor": "*",
+    "@xprng/common": "*",
     "marked": ">=16.0.0",
     "shiki": ">=3.9.0"
   },
