--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,12 +63,12 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: cd dist/xprng/markdown && npx semantic-release
 
-      - name: 🦋release code
-        if: contains(github.event.head_commit.message, '(code)')
+      - name: 🦋release content
+        if: contains(github.event.head_commit.message, '(content)')
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: cd dist/xprng/code && npx semantic-release
+        run: cd dist/xprng/content && npx semantic-release
 
       - name: 🦋release slides
         if: contains(github.event.head_commit.message, '(slides)')
